# wasm-img-to-base64

./: .gitignore  lws.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
src/: index.html  index.ts  to-base64-wasm.ts  to-base64.ts  wasm.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
