[package]
name = "wasm"
version = "0.1.0"
authors = ["mojahige <mojahige@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.62"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Window',
  'Document',
  'HtmlImageElement',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d'
]